--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "framer-motion": "^11.13.1",
     "hamburger-react": "^2.5.1",
     "next": "15.0.3",
