--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "hamburger-react": "^2.5.1",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/smoothscroll-polyfill": "^0.3.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
