--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "hamburger-react": "^2.5.1",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "smoothscroll-polyfill": "^0.4.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.9",
