--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@vercel/postgres": "^0.10.0",
     "framer-motion": "^11.13.1",
     "hamburger-react": "^2.5.1",
-    "next": "15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^15.0.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
