--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "22.x"
+    "node": ">=18.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -12,10 +12,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.10.0",
+    "@supabase/supabase-js": "^2.47.8",
     "framer-motion": "^11.13.1",
     "hamburger-react": "^2.5.1",
     "next": "^15.0.4",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
